k8s/auth-service.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: auth-service-dep
  namespace: hospital-ns
  labels:
    app: auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      name: auth-service-pod
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service-cont
          image: ebrahimmohammed/hospital-auth-service:latest
          ports:
            - containerPort: 4001
---
apiVersion: v1 
kind: Service
metadata:
  name: auth-service-srv 
  namespace: hospital-ns
spec:
  selector:
    app: auth-service
  ports:
    - port: 4001
      targetPort: 4001
  type: ClusterIP
