k8s/chatbot.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: chatbot-dep
  namespace: hospital-ns
  labels:
    app: chatbot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatbot
  template:
    metadata:
      name: chatbot-pod
      # Removed 'name' as it's handled by the Deployment controller
      labels:
        app: chatbot
    spec:
      containers:
        - name: chatbot-cont
          image: monabawi/hospital-medical-chatbot:v11.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
---
apiVersion: v1 
kind: Service
metadata:
  name: chatbot-srv 
  namespace: hospital-ns
spec:
  selector:
    app: chatbot
  ports:
    - port: 9090
      targetPort: 9090
  type: ClusterIP
