k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend-dep 
  namespace: hospital-ns
  labels:
    app: frontend 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod 
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-cont
          image: ahmedkabil/hospital-frontend:v1   # v1 contain ahmed domain  v2: contain nabawi domain
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-srv 
  namespace: hospital-ns
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
