k8s/metric-servo-service.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: metric-servo-service-dep
  namespace: hospital-ns
  labels:
    app: metric-servo-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metric-servo-service
  template:
    metadata:
      name: metric-servo-service-pod
      labels:
        app: metric-servo-service
    spec:
      containers:
        - name: metric-servo-service-cont
          image: ahmedkabil/hospital-metric-servo-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4005
---
apiVersion: v1 
kind: Service
metadata:
  name: metric-servo-service-srv 
  namespace: hospital-ns
spec:
  selector:
    app: metric-servo-service
  ports:
    - port: 4005
      targetPort: 4005
  type: ClusterIP
