k8s/mongodb.yml
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: mongodb-sfs 
  namespace: hospital-ns
  labels:
    app: mongodb
spec:
  serviceName: mongodb-headless-srv
  replicas: 3
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels: 
        app: mongodb
    spec:
      containers:
        - name: mongodb-cont 
          image: mongo:6.0
          volumeMounts:
            - name: mongodb-pvc
              mountPath: /data/db
          ports:
            - containerPort: 27017
          args: ["--replSet", "rs0", "--bind_ip_all"]
  volumeClaimTemplates:
    - metadata:
        name: mongodb-pvc
      spec:
        storageClassName: hospital-local-path
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
---
apiVersion: v1
kind: Service 
metadata:
  name: mongodb-headless-srv
  namespace: hospital-ns
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
