k8s/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: redis-dep
  namespace: hospital-ns
  labels:
    app: redis 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis 
  template:
    metadata:
      name: redis-pod
      labels:
        app: redis 
    spec:
      containers:
        - name: redis-cont
          image: redis:alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-srv 
  namespace: hospital-ns
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
