k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hospital-ingress
  namespace: hospital-ns
  annotations:
    # CORS
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
    nginx.ingress.kubernetes.io/cors-max-age: "86400"

    # Rewrite
    nginx.ingress.kubernetes.io/rewrite-target: /get$1
    nginx.ingress.kubernetes.io/use-regex: "true"

    # Timeouts
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"

    # Optional (only if you REALLY need this header)
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Content-Type $content_type;
spec:
  ingressClassName: nginx
  tls: 
    - hosts: 
       - hospital.ahmedkabil.me
      secretName: hospital-tls-secret
  rules:
    - host: hospital.ahmedkabil.me
      http:
        paths:
          - path: /api/login
            pathType: Prefix
            backend:
              service:
                name: auth-service-srv
                port:
                  number: 4001
#  ======================================
          - path: /api/staff
            pathType: Prefix
            backend:
              service:
                name: core-service-srv
                port:
                  number: 4002
#  ======================================
          - path: /api/patients
            pathType: Prefix
            backend:
              service:
                name: core-service-srv
                port:
                  number: 4002
#  ======================================
          - path: /api/other
            pathType: Prefix
            backend:
              service:
                name: core-service-srv
                port:
                  number: 4002
#  ======================================
          - path: /api/appointments
            pathType: Prefix
            backend:
              service:
                name: core-service-srv
                port:
                  number: 4002
#  ======================================
          - path: /api/readings
            pathType: Prefix
            backend:
              service:
                name: iot-service-srv
                port:
                  number: 4003
#  ======================================
          - path: /api/conversations
            pathType: Prefix
            backend:
              service:
                name: chat-service-srv
                port:
                  number: 4004
#  ======================================
          - path: /api/messages
            pathType: Prefix
            backend:
              service:
                name: chat-service-srv
                port:
                  number: 4004
#  ======================================
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: chat-service-srv
                port:
                  number: 4004
#  ======================================
          - path: /api/chatbot(.*)
            pathType: Prefix
            backend:
              service:
                name: chatbot-srv
                port:
                  number: 9090
#  ======================================
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-srv 
                port:
                  number: 80
